# meeting-facilitator

./: .gitignore  AUDIT.md  CLAUDE.md  PODCAST_QUICKSTART.md  README.md  TDD-GUIDELINES.md  example-meeting.md
.github/workflows/: test-suite.yml
backend/: .env.example  .gitignore  fix_existing_chunks.py  pyproject.toml  requirements.txt  simple_main.py  test_transcription.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  audio.py  auth.py  meetings.py  protocols.py
backend/app/core/: auth.py  encryption.py  file_security.py  logging_config.py  logging_middleware.py  websocket.py
backend/app/db/: session.py
backend/app/models/: __init__.py  meeting.py
backend/app/schemas/: __init__.py  audio_chunk.py  meeting.py  strict_validation.py  websocket_events.py
backend/app/services/: audio_service.py  claude_service.py  idoarrt_service.py  transcription_service.py
backend/tests/: conftest.py
backend/tests/test_api/: test_meetings.py
backend/tests/test_integration/: test_meeting_flow.py
backend/tests/test_services/: test_claude_service.py  test_idoarrt_service.py
docs/: IDOARRT-format.md  LOGGING.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/preparation/: IDOARRTPreview.css  IDOARRTPreview.tsx  IDOARRTUpload.tsx  TestModeUpload.css  TestModeUpload.tsx  UploadRecording.css  UploadRecording.tsx  ValidationErrors.tsx
frontend/src/hooks/: useAudioRecorder.test.ts  useAudioRecorder.ts  useCountdownTimer.ts  useDarkMode.ts  useTestModeAudio.ts
frontend/src/pages/: LiveMeetingView.css  LiveMeetingView.tsx  PreparationView.css  PreparationView.tsx  WrapUpView.css  WrapUpView.tsx
frontend/src/services/: api-with-logging.ts  api.ts
frontend/src/test/: setup.ts
frontend/src/types/: meeting.ts
frontend/src/utils/: logger.ts
scripts/: README_PODCAST.md  podcast_downloader.py  podcast_summarizer.py  podcast_transcriber.py  process_podcast.sh
test/: kaffemaskin-fixed.md  kaffemaskin.md  test-IDOARRT.md
whisper-lab/: transkribera.py
